--- a/geosearch.ipynb
+++ b/geosearch.ipynb
@@ -87,8 +87,8 @@
     "    output_file = \"assets/tweets.csv\"\n",
     "\n",
     "    # Apply for your own Twitter API keys at https://developer.twitter.com/en/apply-for-access\n",
-    "    consumer_key = \"PU7YSFWnVLTA7Pl3hrzbHWbLp\"\n",
-    "    consumer_secret = \"dlTQ4BFmaXQA9lL6iC0rNaZ6yYQaW6FeYlReOBnLGOTpLUEwnV\"\n",
+    "    consumer_key = \"your_consumer_key\"\n",
+    "    consumer_secret = \"your_consumer_secret\"\n",
     "    access_token = \"your_access_token\"\n",
     "    access_token_secret = \"your_access_token_secret\"\n",
     "\n",
